--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "dash": true
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.2",
     "hono": "4.7.5",
     "react": "19.0.0",
     "react-dom": "19.0.0"
